- Metadata for recipe - Fix for titles

--- a/app/views/profile/skapa.scala.html
+++ b/app/views/profile/skapa.scala.html
@@ -7,7 +7,7 @@
         extraValues: models.viewmodels.EditProfileExtraValues)(implicit request: RequestHeader, flash: Flash = Flash.emptyCookie)
 @import helper.twitterBootstrap._
 
-@main(Messages("profile.title"), footerHtml = file.modalImages.render()){
+@main(Messages("profile.create.title"), footerHtml = file.modalImages.render()){
 
     <div class="container">
         <div class="row">
