--- a/app/views/profile/tags.scala.html
+++ b/app/views/profile/tags.scala.html
@@ -2,7 +2,7 @@
         element: List[Type],
         klass: Types)(implicit request: RequestHeader, flash: Flash = Flash.emptyCookie)
 
-@main(Messages("profile.title")){
+@main(Messages("profile.create.title")){
 
     <div class="container">
         <div class="row">
