ritchtext for profile text

--- a/app/views/profile/skapa.scala.html
+++ b/app/views/profile/skapa.scala.html
@@ -91,7 +91,7 @@
                         @helper.textarea(EnvDataForm("aboutme"),
                             'id -> "aboutme",
                             '_showErrors -> true,
-                            'class -> "richtextuser",
+                            'class -> "richtextrecipe",
                             '_label -> Messages("profile.create.form.aboutme"),
                             '_help -> Messages("profile.create.form.aboutme.help"),
                             '_error -> EnvDataForm.error("aboutme")
