new format of user viewed profile page

--- a/app/views/profile/index.scala.html
+++ b/app/views/profile/index.scala.html
@@ -226,7 +226,7 @@
                             <div class="panel-body">
                                 Antal besökare:
                                 <br>
-                                <table>
+                                <table style="width:100%">
                                     <tr>
                                         <td>Inloggade:</td>
                                         <td align="right">
