--- a/app/views/profile/index.scala.html
+++ b/app/views/profile/index.scala.html
@@ -222,33 +222,38 @@
 
                             </div>
                         </div>
-                        <div class="panel panel-default panel-dropshadow big-margin-top">
-                            <div class="panel-body">
-                                Antal besökare:
-                                <br>
-                                <table style="width:100%">
-                                    <tr>
-                                        <td>Inloggade:</td>
-                                        <td align="right">
-                                        @{userProfile.getmemberVisited() match {
-                                            case  null => { 0 }
-                                            case _ => { userProfile.getmemberVisited().getSize }
-                                        }}
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>Icke inloggade: </td>
-                                        <td align="right">
-                                        @{userProfile.getUnKnownVisited() match {
-                                            case  null => { 0 }
-                                            case _ => { userProfile.getUnKnownVisited().getSize }
-                                        }}
-                                        </td>
-                                    </tr>
-                                </table>
 
-                            </div>
-                        </div>
+                        @if((myReviewBoxes.nonEmpty || myRecipeReviewBoxes.nonEmpty) && isThisMyProfile) {
+
+
+                                <div class="panel panel-default panel-dropshadow big-margin-top">
+                                    <div class="panel-body">
+                                        Antal besökare:
+                                        <br>
+                                        <table style="width:100%">
+                                            <tr>
+                                                <td>Inloggade:</td>
+                                                <td align="right">
+                                                @{userProfile.getmemberVisited() match {
+                                                    case  null => { 0 }
+                                                    case _ => { userProfile.getmemberVisited().getSize }
+                                                }}
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td>Icke inloggade: </td>
+                                                <td align="right">
+                                                @{userProfile.getUnKnownVisited() match {
+                                                    case  null => { 0 }
+                                                    case _ => { userProfile.getUnKnownVisited().getSize }
+                                                }}
+                                                </td>
+                                            </tr>
+                                        </table>
+
+                                    </div>
+                                </div>
+                        }
                     </div>
                 </div>
 
