--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -345,6 +345,45 @@ input[type="reset"]:hover
 {
   margin:0px;
 }
+.btn-circle {
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  padding: 6px 0;
+  font-size: 12px;
+  line-height: 1.428571429;
+  border-radius: 15px;
+  margin:5px;
+}
+.btn-circle.btn-lg {
+  width: 50px;
+  height: 50px;
+  padding: 10px 16px;
+  font-size: 18px;
+  line-height: 1.33;
+  border-radius: 25px;
+}
+.btn-circle.btn-xl {
+  width: 70px;
+  height: 70px;
+  padding: 10px 16px;
+  font-size: 24px;
+  line-height: 1.33;
+  border-radius: 35px;
+}
+
+.btn-orange {
+  background-color:@hdc-orange;
+  border-color:@hdc-orange;
+  color: #fff;
+}
+.btn-orange:hover,
+.btn-orange:focus {
+  background-color:#fff;
+  border-color:#fff;
+  color: @hdc-orange;
+}
+
 
 .btn-close {
   position: absolute;
@@ -656,7 +695,7 @@ input[type="reset"]:hover
   margin:0 auto;
 }
 #modal-image-grid-tab {
-  padding-top:5px;
+  padding-top:20px;
 }
 .image-chooser .modal-content {
   background-color: @hdc-light-gray;
@@ -744,10 +783,11 @@ input[type="reset"]:hover
   color:@hdc-orange;
   font-family: 'Glyphicons Halflings';
   top:50%;
-  margin-top:-30px;
+  margin-top:-18px;
   left:50%;
-  margin-left: -20px;
-  font-size:300%;
+  margin-left: -14px;
+  font-size:200%;
+  opacity: 0.7;
 }
 .image-chooser .thumbnail-overlay img {
   margin: 0 auto;
@@ -762,6 +802,22 @@ input[type="reset"]:hover
   max-height: 100%;
   max-width:100%;
 }
+.image-chooser .overlay-functions {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-color: rgba(0,0,0,0.5);
+}
+.image-chooser .btn-function {
+  position: relative;
+  top:29%;
+}
+.image-chooser .btn-function:hover {
+  cursor: pointer;
+}
+
 .preview-row img {
   border:1px solid @hdc-gray;
 }
@@ -769,6 +825,7 @@ input[type="reset"]:hover
 .image-chooser a.thumbnail:focus,
 .image-chooser a.thumbnail.active{
   border-color: @hdc-orange;
+  cursor: default;
 }
 .image-chooser .thumbnail.selected {
   border:1px solid @hdc-orange;
