--- a/app/views/admin/index.scala.html
+++ b/app/views/admin/index.scala.html
@@ -9,4 +9,7 @@
         </div>
     </div>
 
+    <div class="row big-margin-top">
+            @controllers.admin.AdminStatisticsController.getStatBox
+    </div>
 }
