--- a/app/views/mainedit.scala.html
+++ b/app/views/mainedit.scala.html
@@ -15,20 +15,17 @@
     </head>
     <body>
         <div id="wrap">
-            <div class="container-fluid">
-                <div class="navbar-static-top">
-                    <a class="navbar-brand" href="#">@Messages("admin.menu.title")</a>
-                    <ul class="nav navbar-nav">
-                        <li><a href="@controllers.admin.routes.AdminContentController.editIndex()">@Messages("admin.menu.pages")&nbsp;<span class="glyphicon glyphicon-file"></span></a></li>
-                        <li><a href="@controllers.admin.routes.AdminRecipeController.editIndex()">@Messages("admin.menu.recipe")&nbsp;<span class="glyphicon glyphicon-leaf"></span></a></li>
-                        <li><a href="@controllers.admin.routes.AdminCountyController.editIndex()">@Messages("admin.menu.county")&nbsp;<span class="glyphicon glyphicon-road"></span></a></li>
-                        <li><a href="@controllers.admin.routes.AdminTagWordController.editIndex()">@Messages("admin.menu.tagword")&nbsp;<span class="glyphicon glyphicon-bookmark"></span></a></li>
-                        <li><a href="@controllers.admin.routes.AdminUserCredentialController.editIndex()">@Messages("admin.menu.users")&nbsp;<span class="glyphicon glyphicon-user"></span></a></li>
-                        <li><a href="@controllers.admin.routes.AdminUserRoleController.editIndex()">@Messages("admin.menu.roles")&nbsp;<span class="glyphicon glyphicon-lock"></span></a></li>
-                        <li><a href="@controllers.admin.routes.AdminFileController.editIndex()">@Messages("admin.menu.files")&nbsp;<span class="glyphicon glyphicon-picture"></span></a></li>
-                        <li><a href="@controllers.admin.routes.AdminReleaseController.editIndex()">@Messages("admin.menu.release")&nbsp;<span class="glyphicon glyphicon-asterisk"></span></a></li>
-                    </ul>
-                    <ul class="nav navbar-nav pull-right">
+            <div class="container">
+                    <ul class="nav nav-pills">
+                        <li><a class="text-orange" href="@controllers.admin.routes.AdminController.index()">@Messages("admin.menu.title")</a></li>
+                        <li><a href="@controllers.admin.routes.AdminContentController.listAll()"><span class="glyphicon glyphicon-file"></span>&nbsp;@Messages("admin.menu.pages")</a></li>
+                        <li><a href="@controllers.admin.routes.AdminRecipeController.listAll()"><span class="glyphicon glyphicon-cutlery"></span>&nbsp;@Messages("admin.menu.recipe")</a></li>
+                        <li><a href="@controllers.admin.routes.AdminCountyController.listAll()"><span class="glyphicon glyphicon-map-marker"></span>&nbsp;@Messages("admin.menu.county")</a></li>
+                        <li><a href="@controllers.admin.routes.AdminTagWordController.listAll()"><span class="glyphicon glyphicon-tags"></span>&nbsp;@Messages("admin.menu.tagword")</a></li>
+                        <li><a href="@controllers.admin.routes.AdminUserCredentialController.listAll()"><span class="glyphicon glyphicon-user"></span>&nbsp;@Messages("admin.menu.users")</a></li>
+                        <li><a href="@controllers.admin.routes.AdminUserRoleController.editIndex()"><span class="glyphicon glyphicon-lock"></span>&nbsp;@Messages("admin.menu.roles")</a></li>
+                        <li><a href="@controllers.admin.routes.AdminFileController.editIndex()"><span class="glyphicon glyphicon-picture"></span>&nbsp;@Messages("admin.menu.files")</a></li>
+                        <li><a href="@controllers.admin.routes.AdminReleaseController.editIndex()"><span class="glyphicon glyphicon-transfer"></span>&nbsp;@Messages("admin.menu.release")</a></li>
                         <li><a href="@routes.StartPageController.index()"><span class="glyphicon glyphicon-globe"></span>&nbsp;@Messages("admin.menu.backtosite")</a></li>
                     </ul>
                 </div>
