Admin changes - Save and abort buttons now redirects to lists

--- a/app/views/admin/county/add.scala.html
+++ b/app/views/admin/county/add.scala.html
@@ -14,7 +14,7 @@
                 </fieldset>
                 <div class="form-actions">
                     <button class="btn btn-primary" type="submit">@Messages("admin.add.save")</button>
-                    <a class="btn" href="@controllers.admin.routes.AdminCountyController.editIndex()">@Messages("admin.add.abort")</a>
+                    <a class="btn" href="@controllers.admin.routes.AdminCountyController.listAll()">@Messages("admin.add.abort")</a>
                 </div>
             }
         </div>
