--- a/app/views/admin/recipe/add.scala.html
+++ b/app/views/admin/recipe/add.scala.html
@@ -27,7 +27,7 @@
                 </fieldset>
                 <div class="form-actions">
                     <button class="btn btn-primary" type="submit">@Messages("admin.add.save")</button>
-                    <a class="btn" href="@controllers.admin.routes.AdminContentController.editIndex()">@Messages("admin.add.abort")</a>
+                    <a class="btn" href="@controllers.admin.routes.AdminContentController.listAll()">@Messages("admin.add.abort")</a>
                 </div>
             }
         </div>
