--- a/app/views/admin/usercredential/add.scala.html
+++ b/app/views/admin/usercredential/add.scala.html
@@ -15,7 +15,7 @@
                 </fieldset>
                 <div class="form-actions">
                     <button class="btn btn-primary" type="submit">@Messages("admin.add.save")</button>
-                    <a class="btn" href="@controllers.admin.routes.AdminUserCredentialController.editIndex()">@Messages("admin.add.abort")</a>
+                    <a class="btn" href="@controllers.admin.routes.AdminUserCredentialController.listAll()">@Messages("admin.add.abort")</a>
                 </div>
             }
         </div>
